log
Thu 24 Aug 2023 08:16:11 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: statement with no effect [-Werror=unused-value]
   33 |   list->head;
      |   ~~~~^~~~~~
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
list.c: In function ‘prevList’:
list.c:52:13: error: expected expression before ‘)’ token
   52 |   if(list ==)
      |             ^
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
93ff3c6
Thu 24 Aug 2023 08:23:30 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c: In function ‘pushFront’:
list.c:65:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   65 |   list->size++;
      |       ^~
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f6790e
Thu 24 Aug 2023 08:23:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f4e9989
Thu 24 Aug 2023 08:24:15 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
4136fb5
Thu 24 Aug 2023 08:29:25 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0a7ce5a
Thu 24 Aug 2023 08:44:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7f2707f
Thu 24 Aug 2023 08:44:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eff0f8f
Thu 24 Aug 2023 08:48:30 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current = list->next;
      |                       ^~
Compilation failed
a4b0042
Thu 24 Aug 2023 08:49:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5afd6a2
Thu 24 Aug 2023 08:49:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
32b1841
Thu 24 Aug 2023 08:49:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0be88b5
Thu 24 Aug 2023 08:50:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
96b498e
Thu 24 Aug 2023 08:51:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:7: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->next = list->current->next;
      |       ^~
Compilation failed
775ceed
Thu 24 Aug 2023 08:51:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
631a599
Thu 24 Aug 2023 08:53:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7dae95
Thu 24 Aug 2023 08:54:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:17: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   48 |     return (list->next->data);
      |                 ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
566f410
Thu 24 Aug 2023 08:54:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ac9ac39
Thu 24 Aug 2023 08:55:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c4ee28
Thu 24 Aug 2023 08:56:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6b99373
Thu 24 Aug 2023 09:00:49 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5cad345
Thu 24 Aug 2023 09:01:22 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
1619756
Fri 25 Aug 2023 05:30:17 AM UTC: 
 list.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
93cf4d9
Fri 25 Aug 2023 05:31:54 AM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
f2ab120
Fri 25 Aug 2023 05:32:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
311b20f
Fri 25 Aug 2023 05:34:04 AM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
286a110
Fri 25 Aug 2023 05:35:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5a245ce
Fri 25 Aug 2023 05:38:28 AM UTC: 
 list.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  6|4
total_score: 25/70
d827e95
Fri 25 Aug 2023 05:38:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
11b8a33
Fri 25 Aug 2023 05:41:24 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
b9ee1d5
Sat 26 Aug 2023 12:11:45 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:74:18: error: expected identifier before ‘;’ token
   74 |   n->data =list->;
      |                  ^
Compilation failed
3234972
Sat 26 Aug 2023 12:12:06 AM UTC: 
 list.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:9: error: unused variable ‘n’ [-Werror=unused-variable]
   73 |   Node* n=createNode(data);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
7fb689b
Sat 26 Aug 2023 12:12:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
bd49573
Sat 26 Aug 2023 12:15:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
a42b101
Sat 26 Aug 2023 12:17:42 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
d2ad21c
Sat 26 Aug 2023 12:20:20 AM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
b8ad12a
Sat 26 Aug 2023 12:32:28 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  10|2
total_score: 45/70
8b1880b
Sat 26 Aug 2023 12:41:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:74:21: error: dereferencing ‘void *’ pointer [-Werror]
   74 |   return (temp->data->head); // Retornar un puntero al dato del nodo anterior
      |                     ^~
list.c:74:21: error: request for member ‘head’ in something not a structure or union
list.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5213162
Sat 26 Aug 2023 12:42:29 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
c4bfe03
